# fdf-relief-landscape

./: CMakeLists.txt  Makefile  README.md  alg_bbashiri.c  fdf  fdf.h  keyboard_events.c  main.c  map.c  modify.c  vector.c
libft/: ft_atoi.c  ft_bzero.c  ft_countint.c  ft_countwords.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lenchar.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdelite.c  (+26 more)
maps/: diana.fdf  face.fdf  matrix.c  matrix.h  rasul.fdf
src/: camera.c  draw.c  fdf.h  keyboard_events.c  main.c  map.c  map_tools.c  modify.c  vector.c
